# FamicomEmulator

./: .gitignore  CMakeLists.txt
include/: config.hpp  cpu.hpp  loader.hpp  logger.hpp  memory.hpp  types.hpp
src/: cpu.cpp  loader.cpp  logger.cpp  main.cpp
